# seminar_generics_traits

./: Cargo.toml
src/: list.rs
src/generics/: 1.rs  2.rs
src/traits/: 1.rs  dyn.rs  iterators.rs  supertraits.rs
